data/derived/comb/progs/unify/prog0397.ml.out
Characters 110-114:
  List.fold_left f base fs;;
                   ^^^^
Error: This expression has type 'a -> 'a
       but an expression was expected of type 'b list
